tests/ui/parser/method-call-on-struct-literal-in-if-condition.stderr
error: invalid struct literal
  --> $DIR/method-call-on-struct-literal-in-if-condition.rs:10:8
   |
LL |     if Example { a: one(), }.is_pos() {
   |        ^^^^^^^^^^^^^^^^^^^^^
   |
help: you might need to surround the struct literal with parentheses
   |
LL |     if (Example { a: one(), }).is_pos() {
   |        +                     +

error: aborting due to previous error

